TFP-5554: Forbedre generering av nytt historikkinnslag for vurdering/… (#6991)
TFP-5554: Forbedre generering av nytt historikkinnslag for vurdering/overstyring av uttak